Added an answerfor #7.

--- a/hw02/hw02.tex
+++ b/hw02/hw02.tex
@@ -77,4 +77,18 @@ mult $v0, $a0, $a1
 
 OC-relative branching jumps to a place in memory relative to where the program execution is at the time of branching. Because it is relative, there is a limit to how far in memory the program can jump (in MIPS, it is 16 bits). If `there' is more than 16 bits of memory away from `here', then the branch is not possible. The assembler might correct this by having an intermediate jump statement that is less than 16 bits away from `here' and that jumps to `there'.
 
+\section*{5.}
+
+\section*{6.}
+
+\section*{7.}
+
+\noindent{\bf a.} $-5435391$
+
+\noindent{\bf b.} $2903506946$
+
+\noindent{\bf c.} $2.903506946^9$
+
+\noindent{\bf d.} It is an sw operation in MIPS.
+
 \end{document}
