Added more explanation for #10

--- a/hw02/hw02.tex
+++ b/hw02/hw02.tex
@@ -137,4 +137,10 @@ Given that the CPI of the machine is the sum of the weighted CPIs for each set o
 
 This would give the $CPI_{mopt}$ a slight advantage in performance.
 
+Using Amdahl's Law:
+
+\begin{align*}
+Overall Speedup = \frac{2.80}{2.45} = 1.43 
+\end{align*}
+
 \end{document}
