Added an answer for #9.

--- a/hw02/hw02.tex
+++ b/hw02/hw02.tex
@@ -124,7 +124,21 @@ In this particular problem, the overflow does not cause any issues because y is 
 
 \section*{9.}
 
+Given that $performance = CPI \times Clock Rate$:
+\begin{center}
+\begin{tabular}{|l|l|l|}
+	\hline
+        Class & P1 Performance &  P2 Performance \\ \hline
+        A     & 4              & 12              \\ \hline
+        B     & 8              & 12              \\ \hline
+        C     & 12             & 12              \\ \hline
+        D     & 16             & 24              \\ \hline
+        E     & 12             & 24              \\
+	\hline
+\end{tabular}
 
+In this table, performance is given in billions of instructions per second.
+\end{center}
 
 \section*{10.}
 
