Added the answer for question 1.

--- a/hw05/hw05.tex
+++ b/hw05/hw05.tex
@@ -11,6 +11,9 @@
 \begin{document}
 \maketitle
 
+{\bf 1} If all misses are classified into one of  three categories – compulsory, capacity, or conflict -- which misses are likely to be reduced when a program is re-written so as to require less memory? How about if the clock rate of the processor the program is running on is increased? How about if the associativity of the existing cache increased?
+
+Compulsory, capacity and conflict misses should be reduced if the program is written to require less memory. Increased clock speed will not have an effect on misses regardless of type, but associativity should reduce conflict misses.
 
 \section*{2}
 
