Added the answer for question 2.

--- a/hw05/hw05.tex
+++ b/hw05/hw05.tex
@@ -30,6 +30,26 @@ Because the times are almost identical, the there is no gain from doing this.
 
 \section*{2} 
 
+Processor 1:
+\begin{align*}
+Miss penalty &= 6 + 1 = 7 cycles \\
+Stalls per Inst. &= 4\% * 7 + 50\% * 6\% * 7 =.49
+\end{align*}
+
+Processor 2:
+\begin{align*}
+Miss penalty &= 6 + 4 = 10 cycles \\
+Stalls per Inst. &= 2\% × 10 + 50\% × 4\% × 10 = 0.4
+\end{align*}
+
+Processor 3:
+\begin{align*}
+Miss penalty &= 6 + 4 = 10 cycles \\
+Stalls per Inst. &= 2\% × 10 + 50\% × 3\% × 10 = 0.35
+\end{align*}
+
+Processor 1 spends the most time on Cache misses.
+
 \section*{3}
 
 \section*{4}
