--- a/hw05/hw05.tex
+++ b/hw05/hw05.tex
@@ -28,7 +28,9 @@ CPU Time_b &= IC * (2 + 1.5 * 20 * .03) * 2.4 = 6.96 * IC
 
 Because the times are almost identical, the there is no gain from doing this.
 
-\section*{2} 
+\section*{2}
+
+\section*{3} 
 
 Processor 1:
 \begin{align*}
@@ -50,9 +52,49 @@ Stalls per Inst. &= 2\% × 10 + 50\% × 3\% × 10 = 0.35
 
 Processor 1 spends the most time on Cache misses.
 
-\section*{3}
-
 \section*{4}
+
+\begin{tabular}{|l|l|}
+\hline
+Reference & Hit or Miss \\ \hline
+2 & Miss \\ \hline
+3 & Miss \\ \hline
+11 & Miss \\ \hline
+16 &  Miss \\ \hline
+21 &  Miss \\ \hline
+13 &  Miss \\ \hline
+64 &  Miss \\ \hline
+48 &  Miss \\ \hline
+19 &  Miss \\ \hline
+11 & Hit \\ \hline
+3 &  Miss \\ \hline
+22 &  Miss \\ \hline
+4 &  Miss \\ \hline
+27 &  Miss \\ \hline
+6 &  Miss \\ \hline
+11 &  Miss \\ \hline
+\end{tabular}
+
+\begin{tabular}{|l|l|}
+\hline
+Index & Cache Contents \\ \hline
+0 & 48 \\ \hline
+1 & \\ \hline
+2 & 2 \\ \hline
+3 & 3 \\ \hline
+4 & 4 \\ \hline
+5 & 21 \\ \hline
+6 & 6 \\ \hline
+7 & \\ \hline
+8 & \\ \hline
+9 & \\ \hline
+10 & \\ \hline
+11 & 11 \\ \hline
+12 & \\ \hline
+13 & 13 \\ \hline
+14 & \\ \hline
+15 & \\ \hline
+\end{tabular}
 
 \section*{5} 
 
