--- a/hw05/hw05.tex
+++ b/hw05/hw05.tex
@@ -83,18 +83,26 @@ Stalls per Inst. &= 4\% * 7 + 50\% * 6\% * 7 =.49
 Processor 2:
 \begin{align*}
 Miss penalty &= 6 + 4 = 10 cycles \\
-Stalls per Inst. &= 2\% × 10 + 50\% × 4\% × 10 = 0.4
+Stalls per Inst. &= 2\% × 10 + 50\% * 4\% * 10 = 0.4
 \end{align*}
 
 Processor 3:
 \begin{align*}
 Miss penalty &= 6 + 4 = 10 cycles \\
-Stalls per Inst. &= 2\% × 10 + 50\% × 3\% × 10 = 0.35
+Stalls per Inst. &= 2\% × 10 + 50\% * 3\% * 10 = 0.35
 \end{align*}
 
 Processor 1 spends the most time on Cache misses.
 
 \section*{4}
+
+Total size is number of entries times the size of each array. Number of entries is equal to the number of pages in the virtual address:
+
+\begin{align*}
+\frac{2^{40} bytes}{16 KB} = 2^{36}
+\end{align*}
+
+The wdith of each array is 4 + 36 bits = 8 bytes, so the page table contains $2^{29}$ bytes.
 
 \section*{5} 
 
